@@ -1,3 +1,9 @@
+Changes since revision 164:
+*Added key echo scripts:
+-insert+2 toggle speak typed characters
+-insert+3 toggle speak typed words
+-insert+4 toggle speak command keys
+
 Changes since revision 82:
 *Added support for the automatic speaking of font, style, page number etc of documents.
 *Fixed many small bugs to do with navigating documents by character, word and line.
